--- a/GILI-Inventory/Views/Product/Index.cshtml
+++ b/GILI-Inventory/Views/Product/Index.cshtml
@@ -26,28 +26,42 @@
                                         <th class="border-0 fga">კოდი</th>
                                         <th class="border-0 fga">მწარმოებელი კომპანია</th>
                                         <th class="border-0 fga">იმპორტის თარიღი</th>
+                                        <th class="border-0 fga">ფუნქცია</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model.Products)
                                     {
-                                        <tr>
-                                            <td>@item.Id</td>
-                                            <td>
-                                                @if (item.Image != null)
-                                                {
-                                                    <div class="m-r-10"><img src="@item.Image" alt="user" class="rounded" width="45"></div>
-                                                }
-                                                else
-                                                {
-                                                    <div class="m-r-10"><img src="../assets/images/product-pic.jpg" alt="user" class="rounded" width="45"></div>
-                                                }
-                                            </td>
-                                            <td>@item.Name</td>
-                                            <td>@item.Code</td>
-                                            <td>@item.Brand</td>
-                                            <td>@item.ImportDate</td>
-                                        </tr>
+                                    <tr>
+                                        <td>@item.Id</td>
+                                        <td>
+                                            @if (item.Image != null)
+                                            {
+                                                <div class="m-r-10"><img src="@item.Image" alt="user" class="rounded" width="45"></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="m-r-10"><img src="../assets/images/product-pic.jpg" alt="user" class="rounded" width="45"></div>
+                                            }
+                                        </td>
+                                        <td>@item.Name</td>
+                                        <td>@item.Code</td>
+                                        <td>@item.Brand</td>
+                                        <td>@item.ImportDate</td>
+                                        <td>
+                                            <div class="dropdown">
+                                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    ქმედება
+                                                </a>
+
+                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                    <a class="dropdown-item" asp-route-id="@item.Id" asp-action="Detail" asp-controller="Product">დათვალიერება</a>
+                                                    <a class="dropdown-item" asp-route-id="@item.Id" asp-action="Edit" asp-controller="Product">რედაქტირება</a>
+                                                    <a class="dropdown-item" asp-route-id="@item.Id" asp-action="Delete" asp-controller="Product">წაშლა</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
