--- a/GILI-Inventory/Views/Product/Index.cshtml
+++ b/GILI-Inventory/Views/Product/Index.cshtml
@@ -47,7 +47,7 @@
                                         <td>@item.Name</td>
                                         <td>@item.Code</td>
                                         <td>@item.Brand</td>
-                                        <td>@item.ImportDate</td>
+                                        <td>@item.ImportDate.ToString("dd.MM.yyyy")</td>
                                         <td>
                                             <div class="dropdown">
                                                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
