--- a/GILI-Inventory/Views/Shop/Edit.cshtml
+++ b/GILI-Inventory/Views/Shop/Edit.cshtml
@@ -7,36 +7,19 @@
     <div class="container-fluid  dashboard-content">
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                @if (ViewBag.Message != null)
+                {
+                    <div class="alert alert-success" role="alert">
+                        @ViewBag.Message
+                    </div>
+                }
                 <div class="card">
                     <h5 class="card-header fgnb">მაღაზიის რედაქტირება</h5>
                     <div class="card-body">
                         <form asp-action="Edit">
-                            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
                             <input asp-for="Shop.Id" type="hidden" />
 
-                            <div class="row">
-                                <div class="col-4">
-                                    <div class="form-group">
-                                        <label asp-for="Shop.Name" class="col-form-label fga">დასახელება</label>
-                                        <input asp-for="Shop.Name" class="form-control">
-                                        <span asp-validation-for="Shop.Name" class="text-danger fga"></span>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <div class="form-group">
-                                        <label asp-for="Shop.Address" class="col-form-label fga">მისამართი</label>
-                                        <input asp-for="Shop.Address" class="form-control">
-                                        <span asp-validation-for="Shop.Address" class="text-danger fga"></span>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <div class="form-group">
-                                        <label asp-for="Shop.TypeId" class="col-form-label fga">მაღაზიის ტიპი</label>
-                                        <select asp-items="Model.Components.Types" asp-for="Shop.TypeId" class="form-control"></select>
-                                        <span asp-validation-for="Shop.TypeId" class="text-danger fga"></span>
-                                    </div>
-                                </div>
-                            </div>
+                            <partial name="~/Views/Shop/Helper/ShopCUViewForm.cshtml" model="Model" />
 
                             <div class="form-group">
                                 <button type="submit" class="btn btn-success fgnb">რედაქტირება</button>
