GILI Inventory Updates

--- a/GILI-Inventory/Views/Home/Index.cshtml
+++ b/GILI-Inventory/Views/Home/Index.cshtml
@@ -25,12 +25,12 @@
         <!-- ============================================================== -->
         <div class="row">
             <!-- metric -->
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="text-muted fgnb fsize-20">მაღაზიები</h5>
                         <div class="metric-value d-inline-block">
-                            <h1 class="mb-1 text-primary">32,100</h1>
+                            <h1 class="mb-1 text-primary">@ViewBag.CountShops</h1>
                         </div>
                         <div class="metric-label d-inline-block float-right text-primary fga">
                             <i class="fa fa-fw fa-sort"></i><span> რაოდენობა</span>
@@ -41,51 +41,18 @@
             </div>
             <!-- /. metric -->
             <!-- metric -->
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="text-muted fgnb fsize-20">პროდუქტები</h5>
                         <div class="metric-value d-inline-block">
-                            <h1 class="mb-1 text-primary">4,200</h1>
+                            <h1 class="mb-1 text-primary">@ViewBag.CountProducts</h1>
                         </div>
                         <div class="metric-label d-inline-block float-right text-primary fga">
                             <i class="fa fa-fw fa-sort"></i><span> რაოდენობა</span>
                         </div>
                     </div>
                     <div id="sparkline-2"></div>
-                </div>
-            </div>
-            <!-- /. metric -->
-            <!-- metric -->
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="text-muted fgnb fsize-20">მარკეტი</h5>
-                        <div class="metric-value d-inline-block">
-                            <h1 class="mb-1 text-primary">5,567</h1>
-                        </div>
-                        <div class="metric-label d-inline-block float-right text-primary fga">
-                            <i class="fa fa-fw fa-sort"></i><span> რაოდენობა</span>
-                        </div>
-                    </div>
-                    <div id="sparkline-3">
-                    </div>
-                </div>
-            </div>
-            <!-- /. metric -->
-            <!-- metric -->
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="text-muted fgnb fsize-20">სუპერმარკეტი</h5>
-                        <div class="metric-value d-inline-block">
-                            <h1 class="mb-1 text-primary">3,429</h1>
-                        </div>
-                        <div class="metric-label d-inline-block float-right text-primary fga">
-                            <i class="fa fa-fw fa-sort"></i><span> რაოდენობა</span>
-                        </div>
-                    </div>
-                    <div id="sparkline-4"></div>
                 </div>
             </div>
             <!-- /. metric -->
